force-app/main/default/objects/Campaign_Content__c/Campaign_Content__c.object-meta.xml
<CustomObject>
    <description>SDS-2797 Changes</description>
    <label>Campaign Content</label>
    <nameField>
        <displayFormat>Content ID-{00000}</displayFormat>
        <label>Campaign Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>