force-app/main/default/objects/Campaign_Content__c/fields/Content_Code__c.field-meta.xml
<CustomField>
    <fullName>Content_Code__c</fullName>
    <description>SDS-2797</description>
    <label>Content Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>