force-app/main/default/objects/Campaign_Content__c/fields/Content_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Name__c</fullName>
    <description>SDS-2797</description>
    <label>Content Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>