force-app/main/default/objects/Campaign_Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>SDS-2797</description>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Blog post</fullName>
            </value>
            <value>
                <fullName>Datasheet</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Design Guide</fullName>
            </value>
            <value>
                <fullName>eBook</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>Social Kit</fullName>
            </value>
            <value>
                <fullName>Solution Overview</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Web page</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>