force-app/main/default/objects/Campaign_Content__c/fields/DAM_Link__c.field-meta.xml
<CustomField>
    <fullName>DAM_Link__c</fullName>
    <description>SDS-2797</description>
    <label>DAM Link</label>
    <type>Url</type>
</CustomField>